fixed caption on mobile

--- a/src/css/responsive.css
+++ b/src/css/responsive.css
@@ -74,7 +74,7 @@
         margin: 1em 0.5em;
     }
     #story {
-        margin: 5em 2em;
+        margin: 6em 2em 5em 2em;
     }
     html {
         font-size: 85%;
@@ -90,7 +90,8 @@
         padding: 0; margin: 0;
     }
     #caption.open {
-        padding-top: 5em;
+        padding-top: 5.5em;
+        padding-bottom: 0.5em;
     }
     #caption-link {
         transform: none;
